Fixed drop down user nav being covered by section nav

--- a/res/css/stylesheet.css
+++ b/res/css/stylesheet.css
@@ -209,7 +209,7 @@ a.hdrA {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
     border: 1px solid black;
     text-align: center;
-    z-index: 1;
+    z-index: 10;
     min-width: 180px;
     background-color: white;
     display: none;
